Jeux comporte un plateau de 10x10 et 5 bateau + Test Plateau

--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,16 @@
   <groupId>BatailleNavale</groupId>
   <artifactId>BatailleNavale</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+  <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>Test</scope>
+        </dependency>
+    </dependencies>
+    
   <build>
     <sourceDirectory>src</sourceDirectory>
     <testSourceDirectory>Test</testSourceDirectory>
